# rhai-egui-experiments

./: Cargo.toml  gui.rhai
src/: lib.rs  main.rs
src/modules/: mod.rs
