[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
eframe = { version = "*", default-features = false, features = ["default_fonts", "egui_glow"] }
notify = "5.0.0-pre.13"
parking_lot = "0.11.2"
rhai = "1.1.2"

[workspace]
members = ["."]
